Added Dicom Type gui with translations

--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -318,6 +318,13 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Series number
 angal.dicom.thumbnail.study                                                      = Study
 angal.dicom.title                                                                = DICOM Viewer
+angal.dicomtype.codem                                                            = Code
+angal.dicomtype.codemaxchars                                                     = Code (max. 3 Stellen)
+angal.dicomtype.codetoolongmaxchars                                              = Code zu lang (max. 3 Stellen)
+angal.dicomtype.deleterow                                                        = Zeile löschen
+angal.dicomtype.pleaseinsertacode                                                = Bitte geben Sie einen Code ein.
+angal.dicomtype.pleaseinsertavaliddescription                                    = Bitte geben Sie eine gültige Beschreibung ein.
+angal.dicomtype.youcannotdeletethisrecord                                        = Diese Daten können nicht gelöscht werden.
 angal.disctype.codem                                                             = Code
 angal.disctype.codemaxchars                                                      = Code (max. 10 Stellen)
 angal.disctype.codetoolongmaxchars                                               = Code zu lang (max. 10 Stellen)
