--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -321,6 +321,13 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Nómeros de serie
 angal.dicom.thumbnail.study                                                      = Estudio
 angal.dicom.title                                                                = Visualizador DICOM
+angal.dicomtype.codem                                                            = Código
+angal.dicomtype.codemaxchars                                                     = Código (máx. 3 caracteres)
+angal.dicomtype.codetoolongmaxchars                                              = Código muy largo (máx. 3 caracteres)
+angal.dicomtype.deleterow                                                        = Eliminar Línea
+angal.dicomtype.pleaseinsertacode                                                = Por favor digitar un código
+angal.dicomtype.pleaseinsertavaliddescription                                    = Por favor digitar una descripción válida
+angal.dicomtype.youcannotdeletethisrecord                                        = No  eliminar este registro
 angal.disctype.codem                                                             = Código
 angal.disctype.codemaxchars                                                      = Código   (máx. 10 caracteres)
 angal.disctype.codetoolongmaxchars                                               = Código muy largo (máx. 10 caracteres)
