--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -321,6 +321,13 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Series number
 angal.dicom.thumbnail.study                                                      = Study
 angal.dicom.title                                                                = DICOM Viewer
+angal.dicomtype.codem                                                            = Code
+angal.dicomtype.codemaxchars                                                     = Code (max 3 caractère)
+angal.dicomtype.codetoolongmaxchars                                              = Code trop long (max 3 caractère)
+angal.dicomtype.deleterow                                                        = Eliminez une ligne
+angal.dicomtype.pleaseinsertacode                                                = Insérez un code
+angal.dicomtype.pleaseinsertavaliddescription                                    = Insérez une description valide
+angal.dicomtype.youcannotdeletethisrecord                                        = Vous ne pouvez éliminer ce record
 angal.disctype.codem                                                             = Code
 angal.disctype.codemaxchars                                                      = Code (max 10 caractère)
 angal.disctype.codetoolongmaxchars                                               = Code trop long (max 10 caractère)
