--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -322,6 +322,16 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Numero serie
 angal.dicom.thumbnail.study                                                      = Studio
 angal.dicom.title                                                                = Visualizzatore DICOM
+angal.dicomtype.codem                                                            = Codice
+angal.dicomtype.codemaxchars                                                     = Codice (max 3 caratteri)
+angal.dicomtype.codetoolongmaxchars                                              = Codice troppo lungo (max 3 caratteri)
+angal.dicomtype.deleterow                                                        = Elimina Riga
+angal.dicomtype.dicomtypebrowsing                                                = Lista tipologie DICOM
+angal.dicomtype.editingdicomtyperecord                                           = Modifica voce tipologia DICOM
+angal.dicomtype.newdicomtyperecord                                               = Nuova voce di tipologia DICOM
+angal.dicomtype.pleaseinsertacode                                                = Prego inserire un codice
+angal.dicomtype.pleaseinsertavaliddescription                                    = Prego inserire una descrizione valida
+angal.dicomtype.youcannotdeletethisrecord                                        = Non puoi eliminare questo record
 angal.disctype.codem                                                             = Codice
 angal.disctype.codemaxchars                                                      = Codice (max 10 caratteri)
 angal.disctype.codetoolongmaxchars                                               = Codice troppo lungo (max 10 caratteri)
@@ -875,6 +885,7 @@ angal.menu.btn.chat                                                             
 angal.menu.btn.deliverytype                                                      = Tipologie Parto
 angal.menu.btn.delresulttype                                                     = Tipologie Esito Parto
 angal.menu.btn.dicom                                                             = DICOM
+angal.menu.btn.dicomtype                                                         = Tipologia Dicom
 angal.menu.btn.disctype                                                          = Tipologie Dimissioni
 angal.menu.btn.disease                                                           = Malattie
 angal.menu.btn.diseaselist                                                       = Lista Malattie
@@ -932,6 +943,7 @@ angal.menu.deliverytype                                                         
 angal.menu.delresulttype                                                         = Tipologie Esito Parto
 angal.menu.descm                                                                 = DESCRIZ.
 angal.menu.dicom                                                                 = DICOM
+angal.menu.dicomtype                                                             = Tipologia Dicom
 angal.menu.disctype                                                              = Tipologie Dimissioni
 angal.menu.disease                                                               = Malattie
 angal.menu.diseaselist                                                           = Lista Malattie
