--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -322,6 +322,16 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Series number
 angal.dicom.thumbnail.study                                                      = Study
 angal.dicom.title                                                                = DICOM Viewer
+angal.dicomtype.codem                                                            = Code
+angal.dicomtype.codemaxchars                                                     = Code (max 3 chars)
+angal.dicomtype.codetoolongmaxchars                                              = Code too long (max 3 chars)
+angal.dicomtype.deleterow                                                        = Delete row
+angal.dicomtype.dicomtypebrowsing                                                = Dicom type browsing
+angal.dicomtype.editingdicomtyperecord                                           = Editing Dicom Type record
+angal.dicomtype.newdicomtyperecord                                               = New Dicom type record
+angal.dicomtype.pleaseinsertacode                                                = Please insert a code
+angal.dicomtype.pleaseinsertavaliddescription                                    = Please insert a valid description
+angal.dicomtype.youcannotdeletethisrecord                                        = You can not delete this record
 angal.disctype.codem                                                             = Code
 angal.disctype.codemaxchars                                                      = Code (max 10 chars)
 angal.disctype.codetoolongmaxchars                                               = Code too long (max 10 chars)
@@ -875,6 +885,7 @@ angal.menu.btn.chat                                                             
 angal.menu.btn.deliverytype                                                      = Delivery Type
 angal.menu.btn.delresulttype                                                     = Delivery Result Type
 angal.menu.btn.dicom                                                             = DICOM Patient
+angal.menu.btn.dicomtype                                                         = Dicom Type
 angal.menu.btn.disctype                                                          = Discharge Type
 angal.menu.btn.disease                                                           = Disease
 angal.menu.btn.diseaselist                                                       = Disease List
@@ -932,6 +943,7 @@ angal.menu.deliverytype                                                         
 angal.menu.delresulttype                                                         = DeliveryResult
 angal.menu.descm                                                                 = DESC
 angal.menu.dicom                                                                 = DICOM Patient
+angal.menu.dicomtype                                                             = Dicom Type
 angal.menu.disctype                                                              = Discharge Type
 angal.menu.disease                                                               = Disease
 angal.menu.diseaselist                                                           = DiseaseList
