Linked DicomType to gui

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -316,6 +316,7 @@ angal.dicom.noconn                                                              
 angal.dicom.nofile                                                               = Configuration file not found
 angal.dicom.open.txt                                                             = Open DICOM
 angal.dicom.thumbnail.age                                                        = Age
+angal.dicom.thumbnail.category                                                   = Category
 angal.dicom.thumbnail.modality                                                   = Modality
 angal.dicom.thumbnail.patient                                                    = Patient
 angal.dicom.thumbnail.series                                                     = Series
