--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -316,6 +316,7 @@ angal.dicom.noconn                                                              
 angal.dicom.nofile                                                               = File di configurazione non trovato
 angal.dicom.open.txt                                                             = Apri DICOM
 angal.dicom.thumbnail.age                                                        = Età
+angal.dicom.thumbnail.category                                                   = Tipologia
 angal.dicom.thumbnail.modality                                                   = Modalità
 angal.dicom.thumbnail.patient                                                    = PAZIENTE
 angal.dicom.thumbnail.series                                                     = Serie
