Op 171 vezo 2 examination window changes (#82)
* OP-171 #comment added UoM to Saturation parameter #time 30min
* Re-mapped Examination module with immutable nullable types and set default temperature = 36°C
* Added new component ScaledJSlider in order to handle decimal values.
- SAT_MAX deprecated (it is always 100)
- HEIGHT_STEP default set to 1 (cm)
* PatientExamination refactoring and settings
- Fixed UoM: removed user defined UoM and adopted SI (Kg for the Weight
and meter for the Height)
- Renamed some DB fields names
* OP-171 #comment moving summary to the bottom
* Changed Summary panel with a JTable
* OP-171 #comment added input fields validations and tabbing
* OP-171 Added automatic conversion of not alphanumeric characters to the regional setting decimal separator in double e float fields
* OP-171 #comment added Remove button
* OP-171 #comment Changed [IT] Sintomi to [IT] Note
* Improved jCheckBoxes focus painting
* Moved getBMIdescription() method to Manager
* Removed unused variable
* Renamed one variable
* Fixed one label [AR][PT]
* OP-171 #comment added InputVerifier for all textfields
* OP-171 #comment Added new fields HGT, Diuresis and Bowel and moved Notes panel to the right

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -291,7 +291,18 @@ angal.common.quantity                                                           
 angal.common.save                                                                = Save
 angal.common.savem                                                               = SAVE
 angal.common.thiscouldretrievealargeamountofdataproceed                          = This could retrieve a large amount of data, proceed?
+angal.common.thisvaluecannotbegreaterthan                                        = This value cannot be greater than 
+angal.common.thisvaluecannotbelesserthan                                         = This value cannot be lesser than 
 angal.common.to                                                                  = To
+angal.common.uom.bpm                                                             = bpm
+angal.common.uom.celsius                                                         = C
+angal.common.uom.centimeter                                                      = cm
+angal.common.uom.kg                                                              = Kg
+angal.common.uom.meter                                                           = m
+angal.common.uom.mgdl                                                            = mg/dl
+angal.common.uom.milliliter                                                      = ml
+angal.common.uom.mmHg                                                            = mmHg
+angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                         = Confirm delete
@@ -406,20 +417,35 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Overweight
 angal.examination.bmi.severeunderweight                                          = Severe Underweight
 angal.examination.bmi.underweight                                                = Underweight
+angal.examination.bowel                                                          = Bowel
+angal.examination.bowel.constipation                                             = Constipation
+angal.examination.bowel.diarrheal                                                = Diarrheal
+angal.examination.bowel.irregular                                                = Irregular
+angal.examination.bowel.regular                                                  = Regular
+angal.examination.diuresis                                                       = Diuresis
+angal.examination.diuresis.anuria                                                = Anuria
+angal.examination.diuresis.frequent                                              = Pollakiuria
+angal.examination.diuresis.hematuria                                             = Hematuria
+angal.examination.diuresis.nocturia                                              = Nocturia
+angal.examination.diuresis.oliguria                                              = Oliguria
+angal.examination.diuresis.physiological                                         = Physiological
+angal.examination.diuresis.pyuria                                                = Pyuria
+angal.examination.diuresis.stranguria                                            = Stranguria
 angal.examination.heartrate                                                      = Heart Rate
 angal.examination.heartrateabbr                                                  = HR
 angal.examination.height                                                         = Height
 angal.examination.heightabbr                                                     = (H)
+angal.examination.hemoglucosetest                                                = Hemo Glucose Test
+angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = Complain
+angal.examination.pleaseinsertavalidboweldescription                             = Please insert a valid Bowel description
+angal.examination.pleaseinsertavaliddiuresisdescription                          = Please insert a valid Diuresis description
 angal.examination.saturation                                                     = Saturation
 angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = Temperature
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = Save Patient Examination
-angal.examination.tooltip.togglearterialpressureexamination                      = Enable / Disable examination Blood Pressure
-angal.examination.tooltip.toggleheartrateexamination                             = Enable / Disable examination Heart Rate
-angal.examination.tooltip.togglesaturationexamination                            = Enable / Disable examination Saturation
-angal.examination.tooltip.toggletemperatureexamination                           = Enable / Disable examination Temperature
+angal.examination.tooltip.toggleexamination                                      = Enable / Disable examination
 angal.examination.weight                                                         = Weight
 angal.examination.weightabbr                                                     = (W)
 angal.exams.find                                                                 = Search
