--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -291,7 +291,18 @@ angal.common.quantity                                                           
 angal.common.save                                                                = Sauve
 angal.common.savem                                                               = SAUVE
 angal.common.thiscouldretrievealargeamountofdataproceed                          = Cela pourrait récupérer une grande quantité de données, procéder?
+angal.common.thisvaluecannotbegreaterthan                                        = Cette valeur ne peut pas être supérieure à 
+angal.common.thisvaluecannotbelesserthan                                         = Cette valeur ne peut pas être inférieure à 
 angal.common.to                                                                  = á
+angal.common.uom.bpm                                                             = bpm
+angal.common.uom.celsius                                                         = °C
+angal.common.uom.centimeter                                                      = cm
+angal.common.uom.kg                                                              = Kg
+angal.common.uom.meter                                                           = m
+angal.common.uom.mgdl                                                            = mg/dl
+angal.common.uom.milliliter                                                      = ml
+angal.common.uom.mmHg                                                            = mmHg
+angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = Non
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                         = Confirm delete
@@ -406,20 +417,35 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Overweight
 angal.examination.bmi.severeunderweight                                          = Severe Underweight
 angal.examination.bmi.underweight                                                = Underweight
+angal.examination.bowel                                                          = Bowel
+angal.examination.bowel.constipation                                             = Constipation
+angal.examination.bowel.diarrheal                                                = Diarrhée
+angal.examination.bowel.irregular                                                = Irregular
+angal.examination.bowel.regular                                                  = Régulier
+angal.examination.diuresis                                                       = Diurèse
+angal.examination.diuresis.anuria                                                = Anurie
+angal.examination.diuresis.frequent                                              = Pollakiurie
+angal.examination.diuresis.hematuria                                             = Hématurie
+angal.examination.diuresis.nocturia                                              = Nocturie
+angal.examination.diuresis.oliguria                                              = Oligurie
+angal.examination.diuresis.physiological                                         = Physiologique
+angal.examination.diuresis.pyuria                                                = Pyuria
+angal.examination.diuresis.stranguria                                            = Strangurie
 angal.examination.heartrate                                                      = Fréquence Cardiaque
 angal.examination.heartrateabbr                                                  = FC
 angal.examination.height                                                         = Hanteur
 angal.examination.heightabbr                                                     = (H)
+angal.examination.hemoglucosetest                                                = Hemo Glucose Test
+angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = remarque
+angal.examination.pleaseinsertavalidboweldescription                             = Veuillez insérer une description valide pour Intestin
+angal.examination.pleaseinsertavaliddiuresisdescription                          = Veuillez insérer une description valide de Diuresis
 angal.examination.saturation                                                     = Saturation
 angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = Température
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = Enregistrer examen
-angal.examination.tooltip.togglearterialpressureexamination                      = Activer / Désactiver examen Pression Artérielle
-angal.examination.tooltip.toggleheartrateexamination                             = Activer / Désactiver examen Fréquence Cardiaque
-angal.examination.tooltip.togglesaturationexamination                            = Activer / Désactiver examen Saturation
-angal.examination.tooltip.toggletemperatureexamination                           = Activer / Désactiver examen Température
+angal.examination.tooltip.toggleexamination                                      = Activer / désactiver l'examen
 angal.examination.weight                                                         = Poids
 angal.examination.weightabbr                                                     = (P)
 angal.exams.find                                                                 = Cherchez
