--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -291,7 +291,18 @@ angal.common.quantity                                                           
 angal.common.save                                                                = Guarda
 angal.common.savem                                                               = GUARDA
 angal.common.thiscouldretrievealargeamountofdataproceed                          = Esto podría recuperar una gran cantidad de datos, proceder?
+angal.common.thisvaluecannotbegreaterthan                                        = Este valor no puede ser mayor que 
+angal.common.thisvaluecannotbelesserthan                                         = Este valor no puede ser menor que 
 angal.common.to                                                                  = A
+angal.common.uom.bpm                                                             = bpm
+angal.common.uom.celsius                                                         = °C
+angal.common.uom.centimeter                                                      = cm
+angal.common.uom.kg                                                              = Kg
+angal.common.uom.meter                                                           = m
+angal.common.uom.mgdl                                                            = mg/dl
+angal.common.uom.milliliter                                                      = ml
+angal.common.uom.mmHg                                                            = mmHg
+angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = Núm
 angal.dicom.delete.request                                                       = óEstó seguro que desea eliminar este archivo?
 angal.dicom.delete.title                                                         = Confirmar Cancelación
@@ -406,20 +417,35 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Sobrepeso
 angal.examination.bmi.severeunderweight                                          = Bajo peso grave
 angal.examination.bmi.underweight                                                = Bajo peso
+angal.examination.bowel                                                          = Bowel
+angal.examination.bowel.constipation                                             = Constipación
+angal.examination.bowel.diarrheal                                                = Diarrea
+angal.examination.bowel.irregular                                                = Irregular
+angal.examination.bowel.regular                                                  = Regular
+angal.examination.diuresis                                                       = Diuresis
+angal.examination.diuresis.anuria                                                = Anuria
+angal.examination.diuresis.frequent                                              = Pollakiuria
+angal.examination.diuresis.hematuria                                             = Hematuria
+angal.examination.diuresis.nocturia                                              = Nocturia
+angal.examination.diuresis.oliguria                                              = Oliguria
+angal.examination.diuresis.physiological                                         = Fisiológica
+angal.examination.diuresis.pyuria                                                = Pyuria
+angal.examination.diuresis.stranguria                                            = Estranguria
 angal.examination.heartrate                                                      = Pulsaciones
 angal.examination.heartrateabbr                                                  = P
 angal.examination.height                                                         = Altura
 angal.examination.heightabbr                                                     = (A)
+angal.examination.hemoglucosetest                                                = Hemo Glucose Test
+angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = Reclamo
+angal.examination.pleaseinsertavalidboweldescription                             = Por favor inserte una descripción válida para el intestino
+angal.examination.pleaseinsertavaliddiuresisdescription                          = Por favor inserte una descripción válida de Diuresis
 angal.examination.saturation                                                     = Saturación
 angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = Temperatura
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = Guardar examen
-angal.examination.tooltip.togglearterialpressureexamination                      = Activar / Desactivar examen Presión arterial
-angal.examination.tooltip.toggleheartrateexamination                             = Activar / Desactivar examen Pulsaciones
-angal.examination.tooltip.togglesaturationexamination                            = Activar / Desactivar examen Saturación
-angal.examination.tooltip.toggletemperatureexamination                           = Activar / Desactivar examen Temperatura
+angal.examination.tooltip.toggleexamination                                      = Activar / Desactivar examen
 angal.examination.weight                                                         = Peso
 angal.examination.weightabbr                                                     = (P)
 angal.exams.find                                                                 = Buscar
