Added 'undefined' default material (#83)

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -528,6 +528,7 @@ angal.lab.stool                                                                 
 angal.lab.swabs                                                                  = مسحات
 angal.lab.tissues                                                                = الأنسجة
 angal.lab.to                                                                     = إلى
+angal.lab.undefined                                                              = غير معرف
 angal.lab.unknownprocedure                                                       = إجراء غير معروف
 angal.lab.urine                                                                  = بول
 angal.labnew.changepatient                                                       = تغيير المريض
