--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -528,6 +528,7 @@ angal.lab.stool                                                                 
 angal.lab.swabs                                                                  = Tupfer
 angal.lab.tissues                                                                = Tessuti
 angal.lab.to                                                                     = bis
+angal.lab.undefined                                                              = Nicht definiert
 angal.lab.unknownprocedure                                                       = Unbekanntes Verfahren
 angal.lab.urine                                                                  = Urin
 angal.labnew.changepatient                                                       = Change Patient
