--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -531,6 +531,7 @@ angal.lab.stool                                                                 
 angal.lab.swabs                                                                  = Swabs
 angal.lab.tissues                                                                = Tissues
 angal.lab.to                                                                     = To
+angal.lab.undefined                                                              = Undefined
 angal.lab.unknownprocedure                                                       = Unknown Procedure
 angal.lab.urine                                                                  = Urine
 angal.labnew.changepatient                                                       = Change Patient
