--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -528,6 +528,7 @@ angal.lab.stool                                                                 
 angal.lab.swabs                                                                  = Esfregão
 angal.lab.tissues                                                                = Tecidos
 angal.lab.to                                                                     = Para
+angal.lab.undefined                                                              = Indefinido
 angal.lab.unknownprocedure                                                       = Procedimento Desconhecido
 angal.lab.urine                                                                  = Urina
 angal.labnew.changepatient                                                       = Mudar de Paciente
